# AzureML-Job-Replayer

./: .gitignore  .pip-audit-known-vulns.txt  README.md  main.py  mltables.yaml  mltables.yaml.example  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: source_config.json  source_config.json.example  target_config.json  target_config.json.example
data/: jobs.json
docs/: job_artifact_copying.md  mltable-migration.md  mltable_copying.md  progress_visualization.md  troubleshooting_no_outputs.md
extractor/: extract_jobs.py
mltable_yaml_migrator/: README.md  __init__.py  export_yaml.py  import_yaml.py  selection.py  util_logging.py
replayer/: build_pipeline.py  conda.yaml  dummy_components.py
replayer/component_code/: log_metrics.py
tests/: conftest.py
tests/extractor/: test_extract_jobs.py
tests/mltable_yaml_migrator/: test_selection.py
tests/replayer/: test_build_pipeline.py
tests/utils/: test_aml_clients.py
utils/: aml_clients.py  log_setup.py
