[project]
name = "azureml-job-replayer"
version = "1.0.1"
description = "This tool helps you **recreate AzureML jobs from one workspace in another** without rerunning the full pipeline logic"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "azure-ai-ml>=1.26.0",
    "azure-identity>=1.21.0",
    "azureml-mlflow>=1.59.0.post1",
    "mlflow>=3.1.4",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0",
    "azure-storage-blob>=12.5.0",
]

[tool.setuptools]
packages = ["extractor", "replayer", "utils", "mltable_yaml_migrator"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
filterwarnings = [
    # Upstream dep noise — not actionable until azureml-mlflow / azure-ai-ml update
    "ignore::DeprecationWarning:google.protobuf.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::marshmallow.warnings.ChangedInMarshmallow4Warning",
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["F401"]
